implemento bootstrap en index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EM Diseño</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body">
@@ -21,63 +22,75 @@
         </nav>
     </header>
     <main class="background">
-        <img class="mainmedia" src="" alt="Home Background">
-        <section class="micro">
-            <img class="micro__logo" src="./assets/images/logos/apv-logo.png" alt="Logo Arte para Vivir">
-            <h2 class="micro__nombre">Arte para vivir</h2>
-            <article>
-                <div>
-                    <img class="micro__portada" src="./assets/images/portadas/apv-portada.JPG" alt="Portada APV">
-                    <h3 class="micro__subtitulo">Subtítulo</h3>
-                    <p class="micro__intro">
-                        Este es el párrafo de presentación y descripción del sub-emprendimiento
-                    </p>
-                    <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
+        <div class="containter-fluid">
+            <img class="mainmedia" src="" alt="Home Background">
+            <div class="row g-2">
+                <div class="col-sm-6 col-lg-3">
+                    <section class="micro">
+                        <img class="micro__logo" src="./assets/images/logos/apv-logo.png" alt="Logo Arte para Vivir">
+                        <h2 class="micro__nombre">Arte para vivir</h2>
+                        <article>
+                            <div>
+                                <img class="micro__portada" src="./assets/images/portadas/apv-portada.JPG" alt="Portada APV">
+                                <h3 class="micro__subtitulo">Subtítulo</h3>
+                                <p class="micro__intro">
+                                Este es el párrafo de presentación y descripción del sub-emprendimiento
+                                </p>
+                                <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
+                            </div>
+                        </article>
+                    </section>
                 </div>
-            </article>
-        </section>
-        <section class="micro">
-            <img class="micro__logo" src="./assets/images/logos/cal-logo.png" alt="Logo Calcareo">
-            <h2 class="micro__nombre">Calcareo</h2>
-            <article>
-                <div>
-                    <img class="micro__portada" src="./assets/images/portadas/cal-portada.jpeg" alt="Portada Calcareo">
-                    <h3 class="micro__subtitulo">Subtítulo</h3>
-                    <p class="micro__intro">
-                        Este es el párrafo de presentación y descripción del sub-emprendimiento
-                    </p>
-                    <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
+                <div class="col-sm-6 col-lg-3">
+                    <section class="micro">
+                        <img class="micro__logo" src="./assets/images/logos/cal-logo.png" alt="Logo Calcareo">
+                        <h2 class="micro__nombre">Calcareo</h2>
+                        <article>
+                            <div>
+                                <img class="micro__portada" src="./assets/images/portadas/cal-portada.jpeg" alt="Portada Calcareo">
+                                <h3 class="micro__subtitulo">Subtítulo</h3>
+                                <p class="micro__intro">
+                                    Este es el párrafo de presentación y descripción del sub-emprendimiento
+                                </p>
+                                <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
+                            </div>
+                        </article>
+                    </section>
+                </div> 
+                <div class="col-sm-6 col-lg-3">   
+                    <section class="micro">
+                        <img class="micro__logo chalogo" src="./assets/images/logos/cha-logo.PNG" alt="Logo Chabela">
+                        <h2 class="micro__nombre">Chabela</h2>
+                        <article>
+                            <div>
+                                <img class="micro__portada" src="./assets/images/portadas/cha-portada.jpg" alt="Portada Chabela">
+                                <h3 class="micro__subtitulo">Subtítulo</h3>
+                                <p class="micro__intro">
+                                    Este es el párrafo de presentación y descripción del sub-emprendimiento
+                                </p>
+                                <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
+                            </div>
+                        </article>
+                    </section>
                 </div>
-            </article>
-        </section>
-        <section class="micro">
-            <img class="micro__logo chalogo" src="./assets/images/logos/cha-logo.PNG" alt="Logo Chabela">
-            <h2 class="micro__nombre">Chabela</h2>
-            <article>
-                <div>
-                    <img class="micro__portada" src="./assets/images/portadas/cha-portada.jpg" alt="Portada Chabela">
-                    <h3 class="micro__subtitulo">Subtítulo</h3>
-                    <p class="micro__intro">
-                        Este es el párrafo de presentación y descripción del sub-emprendimiento
-                    </p>
-                    <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
+                <div class="col-sm-6 col-lg-3">    
+                    <section class="micro">
+                        <img class="micro__logo" src="./assets/images/logos/rakau-logo.png" alt="Logo Rakau">
+                        <h2 class="micro__nombre">Rakau Furniture</h2>
+                        <article>
+                            <div>
+                                <img class="micro__portada" src="./assets/images/portadas/rakau-portada.JPG" alt="Portada Rakau">
+                                <h3 class="micro__subtitulo">Subtítulo</h3>
+                                <p class="micro__intro">
+                                    Este es el párrafo de presentación y descripción del sub-emprendimiento
+                                </p>
+                                <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
+                            </div>
+                        </article>
+                    </section>
                 </div>
-            </article>
-        </section>
-        <section class="micro">
-            <img class="micro__logo" src="./assets/images/logos/rakau-logo.png" alt="Logo Rakau">
-            <h2 class="micro__nombre">Rakau Furniture</h2>
-            <article>
-                <div>
-                    <img class="micro__portada" src="./assets/images/portadas/rakau-portada.JPG" alt="Portada Rakau">
-                    <h3 class="micro__subtitulo">Subtítulo</h3>
-                    <p class="micro__intro">
-                        Este es el párrafo de presentación y descripción del sub-emprendimiento
-                    </p>
-                    <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
-                </div>
-            </article>
-        </section>
+            </div>
+        </div>            
     </main>
     <footer>
         <nav class="inferior">
@@ -89,5 +102,6 @@
             <p class="inferior__texto">Copyright 2022</p>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
