--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros | EM</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
@@ -21,34 +22,40 @@
         </nav>
     </header>
     <section>
-        <article class="historia">
-            <h2>Historia</h2>
-            <img src="" alt="Comienzos de EM">
-            <p>Párrafo donde se relata la historia del estudio de diseño</p>
-        </article>
-        <article class="equipo">
-            <h2 id="equipo__titulo">Equipo</h2>
-            <div class="equipo__miembro">
-                <h3>Nombre de integrante 1</h3>
-                <img src="" alt="Foto integrante 1">
-                <p>Descripción integrante 1</p>
+        <div class="container-fluid equipo">
+            <div class="row g-0">
+                <div class="col-lg-12">
+                    <article class="historia">
+                        <h2>Historia</h2>
+                        <img src="" alt="Comienzos de EM">
+                        <p>Párrafo donde se relata la historia del estudio de diseño</p>
+                    </article>
+                </div>
+                <div class="col-lg-12">
+                    <h2 id="equipo__titulo">Equipo</h2>
+                </div>
+                <div class="equipo__miembro col-md-6 col-lg-3">
+                    <h3>Nombre de integrante 1</h3>
+                    <img src="" alt="Foto integrante 1">
+                    <p>Descripción integrante 1</p>
+                </div>
+                <div class="equipo__miembro col-md-6 col-lg-3">
+                    <h3>Nombre de integrante 2</h3>
+                    <img src="" alt="Foto integrante 2">
+                    <p>Descripción integrante 2</p>
+                </div>
+                <div class="equipo__miembro col-md-6 col-lg-3">
+                    <h3>Nombre de integrante 3</h3>
+                    <img src="" alt="Foto integrante 3">
+                    <p>Descripción integrante 3</p>
+                </div>
+                <div class="equipo__miembro col-md-6 col-lg-3">
+                    <h3>Nombre de integrante 4</h3>
+                    <img src="" alt="Foto integrante 4">
+                    <p>Descripción integrante 4</p>
+                </div>
             </div>
-            <div class="equipo__miembro">
-                <h3>Nombre de integrante 2</h3>
-                <img src="" alt="Foto integrante 2">
-                <p>Descripción integrante 2</p>
-            </div>
-            <div class="equipo__miembro">
-                <h3>Nombre de integrante 3</h3>
-                <img src="" alt="Foto integrante 3">
-                <p>Descripción integrante 3</p>
-            </div>
-            <div class="equipo__miembro">
-                <h3>Nombre de integrante 4</h3>
-                <img src="" alt="Foto integrante 4">
-                <p>Descripción integrante 4</p>
-            </div>
-        </article>
+        </div>
     </section>
     <footer>
         <nav class="inferior">
@@ -60,5 +67,6 @@
             <p class="inferior__texto">Copyright 2022</p>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
