implemento bootstrap en trabajos

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -22,18 +22,22 @@
         </nav>
     </header>
     <section>
-        <div class="container-fluid equipo">
-            <div class="row g-0">
-                <div class="col-lg-12">
-                    <article class="historia">
-                        <h2>Historia</h2>
-                        <img src="" alt="Comienzos de EM">
-                        <p>Párrafo donde se relata la historia del estudio de diseño</p>
-                    </article>
-                </div>
+        <div>
+            <article class="historia">
+                <h2>Historia</h2>
+                <img src="" alt="Comienzos de EM">
+                <p>Párrafo donde se relata la historia del estudio de diseño</p>
+            </article>
+        </div>
+    </section>
+    <section class="equipo">
+        <div class="container-fluid">
+            <div class="row"> 
                 <div class="col-lg-12">
                     <h2 id="equipo__titulo">Equipo</h2>
                 </div>
+            </div>
+            <div class="row gx-2 gy-2">
                 <div class="equipo__miembro col-md-6 col-lg-3">
                     <h3>Nombre de integrante 1</h3>
                     <img src="" alt="Foto integrante 1">
