--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </nav>
     </header>
     <main class="background">
-        <div class="containter-fluid">
+        <div class="container-fluid">
             <img class="mainmedia" src="" alt="Home Background">
-            <div class="row g-2">
+            <div class="row gx-2 g-2">
                 <div class="col-sm-6 col-lg-3">
                     <section class="micro">
                         <img class="micro__logo" src="./assets/images/logos/apv-logo.png" alt="Logo Arte para Vivir">
