--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabajos | EM</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
@@ -21,26 +22,38 @@
         </nav>
     </header>
     <section id="background__trabajos">
-        <article class="trabajos">
-            <img class="trabajos__imagen" src="../assets/images/trabajos/cha-trabajos3.jpg" alt="Trabajo 1">
-            <h2 class="trabajos__titulo">Trabajo 1</h2>
-            <p class="trabajos__abstract">Descripción del Trabajo 1</p>
-        </article>
-        <article class="trabajos">
-            <img class="trabajos__imagen" src="../assets/images/trabajos/cal-trabajos1a.jpeg" alt="Trabajo 2">
-            <h2 class="trabajos__titulo">Trabajo 2</h2>
-            <p class="trabajos__abstract">Descripción del Trabajo 2</p>
-        </article>
-        <article class="trabajos">
-            <img class="trabajos__imagen" src="../assets/images/trabajos/rku-trabajos2c.jpg" alt="Trabajo 3">
-            <h2 class="trabajos__titulo">Trabajo 3</h2>
-            <p class="trabajos__abstract">Descripción del Trabajo 3</p>
-        </article>
-        <article class="trabajos">
-            <img class="trabajos__imagen" src="../assets/images/trabajos/cha-trabajos2.jpg" alt="Trabajo 4">
-            <h2 class="trabajos__titulo">Trabajo 4</h2>
-            <p class="trabajos__abstract">Descripción del Trabajo 4</p>
-        </article>
+        <div class="container-fluid">
+            <div class="row gx-2 g-2">
+                <div class="col-md-6 col-lg-3">
+                    <article class="trabajos">
+                        <img class="trabajos__imagen" src="../assets/images/trabajos/cha-trabajos3.jpg" alt="Trabajo 1">
+                        <h2 class="trabajos__titulo">Trabajo 1</h2>
+                        <p class="trabajos__abstract">Descripción del Trabajo 1</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-3">    
+                    <article class="trabajos">
+                        <img class="trabajos__imagen" src="../assets/images/trabajos/cal-trabajos1a.jpeg" alt="Trabajo 2">
+                        <h2 class="trabajos__titulo">Trabajo 2</h2>
+                        <p class="trabajos__abstract">Descripción del Trabajo 2</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <article class="trabajos">
+                        <img class="trabajos__imagen" src="../assets/images/trabajos/rku-trabajos2c.jpg" alt="Trabajo 3">
+                        <h2 class="trabajos__titulo">Trabajo 3</h2>
+                        <p class="trabajos__abstract">Descripción del Trabajo 3</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <article class="trabajos">
+                        <img class="trabajos__imagen" src="../assets/images/trabajos/cha-trabajos2.jpg" alt="Trabajo 4">
+                        <h2 class="trabajos__titulo">Trabajo 4</h2>
+                        <p class="trabajos__abstract">Descripción del Trabajo 4</p>
+                    </article>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <nav class="inferior">
@@ -52,5 +65,6 @@
             <p class="inferior__texto">Copyright 2022</p>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
