--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda | EM</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
@@ -21,48 +22,64 @@
         </nav>
     </header>
     <section id="background__productos">
-        <div class="productos">
-            <img class="productos__imagen" src="../assets/images/productos/cal-productos1a.jpeg" alt="Producto 1">
-            <h2 class="productos__titulo">Producto 1</h2>
-            <p class="productos__descripcion">Descripción del producto 1</p>
-            <p class="productos__precio">Precio del producto 1</p>
-            <button class="productos__boton">Agregar al carrito</button>
-        </div>       
-        <div class="productos">
-            <img class="productos__imagen" src="../assets/images/productos/cha-productos1.jpg" alt="Producto 2">
-            <h2 class="productos__titulo">Producto 2</h2>
-            <p class="productos__descripcion">Descripción del producto 2</p>
-            <p class="productos__precio">Precio del producto 2</p>
-            <button class="productos__boton">Agregar al carrito</button>
-        </div>    
-        <div class="productos">
-            <img class="productos__imagen" src="../assets/images/productos/cal-productos5.jpeg" alt="Producto 3">
-            <h2 class="productos__titulo">Producto 3</h2>
-            <p class="productos__descripcion">Descripción del producto 3</p>
-            <p class="productos__precio">Precio del producto 3</p>
-            <button class="productos__boton">Agregar al carrito</button>
-        </div>   
-        <div class="productos">
-            <img class="productos__imagen" src="../assets/images/productos/cha-productos2.jpg" alt="Producto 4">
-            <h2 class="productos__titulo">Producto 4</h2>
-            <p class="productos__descripcion">Descripción del producto 4</p>
-            <p class="productos__precio">Precio del producto 4</p>
-            <button class="productos__boton">Agregar al carrito</button>
-        </div> 
-        <div class="productos">
-            <img class="productos__imagen" src="../assets/images/productos/cal-productos3.jpeg" alt="Producto 4">
-            <h2 class="productos__titulo">Producto 5</h2>
-            <p class="productos__descripcion">Descripción del producto 4</p>
-            <p class="productos__precio">Precio del producto 5</p>
-            <button class="productos__boton">Agregar al carrito</button>
-        </div> 
-        <div class="productos">
-            <img class="productos__imagen" src="../assets/images/productos/cha-productos3a.jpg" alt="Producto 4">
-            <h2 class="productos__titulo">Producto 6</h2>
-            <p class="productos__descripcion">Descripción del producto 4</p>
-            <p class="productos__precio">Precio del producto 6</p>
-            <button class="productos__boton">Agregar al carrito</button>
-        </div> 
+        <div class="container-fluid">
+            <div class="row gx-2 g-2">
+                <div class="col-md-6 col-lg-4">
+                    <div class="productos">
+                        <img class="productos__imagen" src="../assets/images/productos/cal-productos1a.jpeg" alt="Producto 1">
+                        <h2 class="productos__titulo">Producto 1</h2>
+                        <p class="productos__descripcion">Descripción del producto 1</p>
+                        <p class="productos__precio">Precio del producto 1</p>
+                        <button class="productos__boton">Agregar al carrito</button>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">       
+                    <div class="productos">
+                        <img class="productos__imagen" src="../assets/images/productos/cha-productos1.jpg" alt="Producto 2">
+                        <h2 class="productos__titulo">Producto 2</h2>
+                        <p class="productos__descripcion">Descripción del producto 2</p>
+                        <p class="productos__precio">Precio del producto 2</p>
+                        <button class="productos__boton">Agregar al carrito</button>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">    
+                    <div class="productos">
+                        <img class="productos__imagen" src="../assets/images/productos/cal-productos5.jpeg" alt="Producto 3">
+                        <h2 class="productos__titulo">Producto 3</h2>
+                        <p class="productos__descripcion">Descripción del producto 3</p>
+                        <p class="productos__precio">Precio del producto 3</p>
+                        <button class="productos__boton">Agregar al carrito</button>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">   
+                    <div class="productos">
+                        <img class="productos__imagen" src="../assets/images/productos/cha-productos2.jpg" alt="Producto 4">
+                        <h2 class="productos__titulo">Producto 4</h2>
+                        <p class="productos__descripcion">Descripción del producto 4</p>
+                        <p class="productos__precio">Precio del producto 4</p>
+                        <button class="productos__boton">Agregar al carrito</button>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4"> 
+                    <div class="productos">
+                        <img class="productos__imagen" src="../assets/images/productos/cal-productos3.jpeg" alt="Producto 4">
+                        <h2 class="productos__titulo">Producto 5</h2>
+                        <p class="productos__descripcion">Descripción del producto 4</p>
+                        <p class="productos__precio">Precio del producto 5</p>
+                        <button class="productos__boton">Agregar al carrito</button>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4"> 
+                    <div class="productos">
+                        <img class="productos__imagen" src="../assets/images/productos/cha-productos3a.jpg" alt="Producto 4">
+                        <h2 class="productos__titulo">Producto 6</h2>
+                        <p class="productos__descripcion">Descripción del producto 4</p>
+                        <p class="productos__precio">Precio del producto 6</p>
+                        <button class="productos__boton">Agregar al carrito</button>
+                    </div> 
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <nav class="inferior">
@@ -74,5 +91,6 @@
             <p class="inferior__texto">Copyright 2022</p>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
