--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto | EM</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
@@ -21,22 +22,30 @@
         </nav>
     </header>
     <section id="background__contacto">
-        <h2 class="form__title">Te ayudamos a materializar tus ideas</h2>
-        <form action="" method="post" enctype="multipart/form-data">
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" placeholder="Nombre">
-            <br>
-            <label for="apellido">Apellido</label>
-            <input type="text" id="apellido" name="apellido" placeholder="Apellido">
-            <br>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Nombre@email.com">
-            <br>
-            <label for="proyecto">Cuéntanos tu idea</label>
-            <textarea name="proyecto" id="proyecto" placeholder="Usa este espacio para contarnos tu idea" cols="30" rows="10"></textarea>
-            <br>
-            <input class="form__boton" type="submit">
-        </form>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12 col-lg-12">
+                    <h2 class="form__title">Te ayudamos a materializar tus ideas</h2>
+                </div>
+                <div class="col-md-10 col-lg-10 mx-auto">
+                    <form action="" method="post" enctype="multipart/form-data">
+                        <label for="nombre">Nombre</label>
+                        <input type="text" id="nombre" name="nombre" placeholder="Nombre">
+                        <br>
+                        <label for="apellido">Apellido</label>
+                        <input type="text" id="apellido" name="apellido" placeholder="Apellido">
+                        <br>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="Nombre@email.com">
+                        <br>
+                        <label for="proyecto">Cuéntanos tu idea</label>
+                        <textarea name="proyecto" id="proyecto" placeholder="Usa este espacio para contarnos tu idea" cols="30" rows="10"></textarea>
+                        <br>
+                        <input class="form__boton" type="submit">
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <nav class="inferior">
@@ -48,5 +57,6 @@
             <p class="inferior__texto">Copyright 2022</p>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
