--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Arquitectura, Diseño y Decoración. Concreta tus ideas. EM Diseño, calidad para tu vida.">
+    <meta name="keywords" content="ESTUDIO, DISEÑO, ARQUITECTURA, DECORACIÓN, MUEBLES, HOGAR, CALIDAD, ESTILO, VIDA">
     <title>EM Diseño</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
