--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros | EM</title>
+    <meta name="description" content="Historia e inicios del Estudio de Diseño EM. Conoce nuestro camino y quienes formamos parte de esta familia.">
+    <meta name="keywords" content="EM DISEÑO, HISTORIA DEL ESTUDIO, EQUIPO DE DISEÑO, NOSOTROS">
+    <title>Nosotros | EM Diseño</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
