--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabajos | EM</title>
+    <meta name="description" content="EM Estudio de Diseño. Disfruta de una selección de nuestros trabajos, proyectos e intervenciones.">
+    <meta name="keywords" content="EM DISEÑO, TRABAJOS, PROYECTOS, ARQUITECTURA, DISEÑO, MUEBLES">
+    <title>Trabajos | EM Diseño</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
