href en logo a index

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav class="principal">
-            <img class="principal__logo" src="../assets/images/logos/em-logo1.png" alt="Logo EM Estudio de Diseño">
+            <a href="../index.html"><img class="principal__logo" src="../assets/images/logos/em-logo1.png" alt="Logo EM Estudio de Diseño"></a>
             <h1 class="principal__titulo">contacto</h1>
             <ul class="menusuperior">
                 <li><a href="../index.html">Inicio</a></li>
