--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                         <article>
                             <div>
                                 <img class="micro__portada" src="./assets/images/portadas/apv-portada.JPG" alt="Portada APV">
-                                <h3 class="micro__subtitulo">Subtítulo</h3>
+                                <h3 class="micro__subtitulo">Arte y Decoración</h3>
                                 <p class="micro__intro">
-                                Este es el párrafo de presentación y descripción del sub-emprendimiento
+                                    Objetos con arte para disfrutar en casa todos los días. Vivir y sentir la alegría de lo bello.
                                 </p>
                                 <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
                             </div>
@@ -50,9 +50,9 @@
                         <article>
                             <div>
                                 <img class="micro__portada" src="./assets/images/portadas/cal-portada.jpeg" alt="Portada Calcareo">
-                                <h3 class="micro__subtitulo">Subtítulo</h3>
+                                <h3 class="micro__subtitulo">Arquitectura y diseño</h3>
                                 <p class="micro__intro">
-                                    Este es el párrafo de presentación y descripción del sub-emprendimiento
+                                    Nos especializamos en ayudarte a concretar tus sueños agregándole calidad al entorno en el que habitas.
                                 </p>
                                 <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
                             </div>
@@ -66,9 +66,9 @@
                         <article>
                             <div>
                                 <img class="micro__portada" src="./assets/images/portadas/cha-portada.jpg" alt="Portada Chabela">
-                                <h3 class="micro__subtitulo">Subtítulo</h3>
+                                <h3 class="micro__subtitulo">Objetos para tu vida</h3>
                                 <p class="micro__intro">
-                                    Este es el párrafo de presentación y descripción del sub-emprendimiento
+                                    Obras con técnicas mixtas pensadas desde el diseño y la estética de la naturaleza. Morfología orgánica. Materiales nobles. Generando sensaciones en quien se acerca y mira la obra.
                                 </p>
                                 <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
                             </div>
@@ -78,13 +78,13 @@
                 <div class="col-sm-6 col-lg-3">    
                     <section class="micro">
                         <img class="micro__logo" src="./assets/images/logos/rakau-logo.png" alt="Logo Rakau">
-                        <h2 class="micro__nombre">Rakau Furniture</h2>
+                        <h2 class="micro__nombre">Rakau</h2>
                         <article>
                             <div>
                                 <img class="micro__portada" src="./assets/images/portadas/rakau-portada.JPG" alt="Portada Rakau">
-                                <h3 class="micro__subtitulo">Subtítulo</h3>
+                                <h3 class="micro__subtitulo">Muebles de diseño</h3>
                                 <p class="micro__intro">
-                                    Este es el párrafo de presentación y descripción del sub-emprendimiento
+                                    A través de nuestros diseños, buscamos alcanzar la practicidad y calidad que el cliente necesita para el desarrollo de sus actividades. 
                                 </p>
                                 <a href=""><img class="micro__redes" src="./assets/images/redes/em-insta.png" alt="red social"></a>
                             </div>
@@ -96,12 +96,13 @@
     </main>
     <footer>
         <nav class="inferior">
-            <img class="inferior__logo" src="./assets/images/logos/em-logo2.png" alt="Logo2 EM Estudio de Diseño">
+            <p class="inferior__texto">Todos los derechos reservados. ©2022 EM Estudio de Diseño</p>
+            <div>
+                <a href=""><img class="redes" src="./assets/images/redes/em-wapp.png" alt="whatsapp"></a>
+                <a href=""><img class="redes" src="./assets/images/redes/em-insta.png" alt="instagram"></a>
+                <a href=""><img class="redes" src="./assets/images/redes/em-pint.png" alt="pinterest"></a>
+            </div>
             <a class="inferior__email" href="mailto:em.estudiodediseño@gmail.com">em.estudiodediseno@gmail.com</a>
-            <a href=""><img class="redes" src="./assets/images/redes/em-wapp.png" alt="whatsapp"></a>
-            <a href=""><img class="redes" src="./assets/images/redes/em-insta.png" alt="instagram"></a>
-            <a href=""><img class="redes" src="./assets/images/redes/em-pint.png" alt="pinterest"></a>
-            <p class="inferior__texto">Copyright 2022</p>
         </nav>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
