--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -41,36 +41,37 @@
             </div>
             <div class="row gx-2 gy-2">
                 <div class="equipo__miembro col-md-6 col-lg-3">
-                    <h3>Nombre de integrante 1</h3>
-                    <img src="" alt="Foto integrante 1">
-                    <p>Descripción integrante 1</p>
+                    <h3 class="equipo__miembro__nombre">Ale</h3>
+                    <img class="equipo__miembro__id" src="../assets/images/equipo/ale.png" alt="Foto Ale">
+                    <p class="equipo__miembro__intro">Decoración y Diseño</p>
                 </div>
                 <div class="equipo__miembro col-md-6 col-lg-3">
-                    <h3>Nombre de integrante 2</h3>
-                    <img src="" alt="Foto integrante 2">
-                    <p>Descripción integrante 2</p>
+                    <h3 class="equipo__miembro__nombre">Agus</h3>
+                    <img class="equipo__miembro__id" src="../assets/images/equipo/agus.png" alt="Foto Agus">
+                    <p class="equipo__miembro__intro">Arquitectura y Fotografía</p>
                 </div>
                 <div class="equipo__miembro col-md-6 col-lg-3">
-                    <h3>Nombre de integrante 3</h3>
-                    <img src="" alt="Foto integrante 3">
-                    <p>Descripción integrante 3</p>
+                    <h3 class="equipo__miembro__nombre">Belu</h3>
+                    <img class="equipo__miembro__id" src="../assets/images/equipo/belu.png" alt="Foto Belu">
+                    <p class="equipo__miembro__intro">Diseño y Artes Plásticas</p>
                 </div>
                 <div class="equipo__miembro col-md-6 col-lg-3">
-                    <h3>Nombre de integrante 4</h3>
-                    <img src="" alt="Foto integrante 4">
-                    <p>Descripción integrante 4</p>
+                    <h3 class="equipo__miembro__nombre">Maca</h3>
+                    <img class="equipo__miembro__id" src="../assets/images/equipo/maca.png" alt="Foto Maca">
+                    <p class="equipo__miembro__intro">Diseño, Construcción y Calidad</p>
                 </div>
             </div>
         </div>
     </section>
     <footer>
         <nav class="inferior">
-            <img class="inferior__logo" src="../assets/images/logos/em-logo2.png" alt="Logo2 EM Estudio de Diseño">
-            <a class="inferior__email" href="mailto:em.estudiodediseño@gmail.com">em.estudiodediseño@gmail.com</a>
-            <a href=""><img class="redes" src="../assets/images/redes/em-wapp.png" alt="whatsapp"></a>
-            <a href=""><img class="redes" src="../assets/images/redes/em-insta.png" alt="instagram"></a>
-            <a href=""><img class="redes" src="../assets/images/redes/em-pint.png" alt="pinterest"></a>
-            <p class="inferior__texto">Copyright 2022</p>
+            <p class="inferior__texto">Todos los derechos reservados. ©2022 EM Estudio de Diseño</p>
+            <div>
+                <a href=""><img class="redes" src="../assets/images/redes/em-wapp.png" alt="whatsapp"></a>
+                <a href=""><img class="redes" src="../assets/images/redes/em-insta.png" alt="instagram"></a>
+                <a href=""><img class="redes" src="../assets/images/redes/em-pint.png" alt="pinterest"></a>
+            </div>
+            <a class="inferior__email" href="mailto:em.estudiodediseño@gmail.com">em.estudiodediseno@gmail.com</a>
         </nav>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
