--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -85,12 +85,13 @@
     </section>
     <footer>
         <nav class="inferior">
-            <img class="inferior__logo" src="../assets/images/logos/em-logo2.png" alt="Logo2 EM Estudio de Diseño">
-            <a class="inferior__email" href="mailto:em.estudiodediseño@gmail.com">em.estudiodediseño@gmail.com</a>
-            <a href=""><img class="redes" src="../assets/images/redes/em-wapp.png" alt="whatsapp"></a>
-            <a href=""><img class="redes" src="../assets/images/redes/em-insta.png" alt="instagram"></a>
-            <a href=""><img class="redes" src="../assets/images/redes/em-pint.png" alt="pinterest"></a>
-            <p class="inferior__texto">Copyright 2022</p>
+            <p class="inferior__texto">Todos los derechos reservados. ©2022 EM Estudio de Diseño</p>
+            <div>
+                <a href=""><img class="redes" src="../assets/images/redes/em-wapp.png" alt="whatsapp"></a>
+                <a href=""><img class="redes" src="../assets/images/redes/em-insta.png" alt="instagram"></a>
+                <a href=""><img class="redes" src="../assets/images/redes/em-pint.png" alt="pinterest"></a>
+            </div>
+            <a class="inferior__email" href="mailto:em.estudiodediseño@gmail.com">em.estudiodediseno@gmail.com</a>
         </nav>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
