actualizacion equipo, trabajos y productos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     </header>
     <main class="background">
         <div class="container-fluid">
-            <img class="mainmedia" src="" alt="Home Background">
             <div class="row gx-2 g-2">
                 <div class="col-sm-6 col-lg-3">
                     <section class="micro">
@@ -33,7 +32,7 @@
                         <h2 class="micro__nombre">Arte para vivir</h2>
                         <article>
                             <div>
-                                <img class="micro__portada" src="./assets/images/portadas/apv-portada.JPG" alt="Portada APV">
+                                <img class="micro__portada" src="./assets/images/portadas/apv-portada.png" alt="Portada APV">
                                 <h3 class="micro__subtitulo">Arte y Decoración</h3>
                                 <p class="micro__intro">
                                     Objetos con arte para disfrutar en casa todos los días. Vivir y sentir la alegría de lo bello.
@@ -49,7 +48,7 @@
                         <h2 class="micro__nombre">Calcareo</h2>
                         <article>
                             <div>
-                                <img class="micro__portada" src="./assets/images/portadas/cal-portada.jpeg" alt="Portada Calcareo">
+                                <img class="micro__portada" src="./assets/images/portadas/cal-portada.png" alt="Portada Calcareo">
                                 <h3 class="micro__subtitulo">Arquitectura y diseño</h3>
                                 <p class="micro__intro">
                                     Nos especializamos en ayudarte a concretar tus sueños agregándole calidad al entorno en el que habitas.
@@ -81,7 +80,7 @@
                         <h2 class="micro__nombre">Rakau</h2>
                         <article>
                             <div>
-                                <img class="micro__portada" src="./assets/images/portadas/rakau-portada.JPG" alt="Portada Rakau">
+                                <img class="micro__portada" src="./assets/images/portadas/rakau-portada.png" alt="Portada Rakau">
                                 <h3 class="micro__subtitulo">Muebles de diseño</h3>
                                 <p class="micro__intro">
                                     A través de nuestros diseños, buscamos alcanzar la practicidad y calidad que el cliente necesita para el desarrollo de sus actividades. 
