--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -26,9 +26,8 @@
     <section>
         <div>
             <article class="historia">
-                <h2>Historia</h2>
-                <img src="" alt="Comienzos de EM">
-                <p>Párrafo donde se relata la historia del estudio de diseño</p>
+                <h2>Nuestro inicio</h2>
+                <p>El estudio de diseño comienza a gestarse con pequeños proyectos que fueron surgiendo a partir de ideas y habilidades individuales de nuestra familia. Nos gusta el arte y el diseño, generar espacios agradables y acogedores de uso cotidiano donde se destaque la mano del artesano. Primero nosotros y luego cada uno de nuestros hijos fueron desplegando sus habilidades y dones personales, expresando a través del trabajo manual, los distintos productos y servicios que conforman este estudio. Nuestro deseo es ofrecer calidad para disfrutar la belleza en el quehacer cotidiano.</p>
             </article>
         </div>
     </section>
@@ -36,29 +35,79 @@
         <div class="container-fluid">
             <div class="row"> 
                 <div class="col-lg-12">
-                    <h2 id="equipo__titulo">Equipo</h2>
+                    <h2 id="equipo__titulo">Conocé nuestro equipo...</h2>
                 </div>
             </div>
-            <div class="row gx-2 gy-2">
-                <div class="equipo__miembro col-md-6 col-lg-3">
-                    <h3 class="equipo__miembro__nombre">Ale</h3>
-                    <img class="equipo__miembro__id" src="../assets/images/equipo/ale.png" alt="Foto Ale">
-                    <p class="equipo__miembro__intro">Decoración y Diseño</p>
+            <div class="row gx-2 g-2">
+                <div class="col-md-6 col-lg-4">
+                    <article class="equipo__miembro">
+                        <h3 class="equipo__miembro__nombre">Ale</h3>
+                        <img class="equipo__miembro__id" src="../assets/images/equipo/ale.png" alt="Foto Ale">
+                        <p class="equipo__miembro__intro">Decoración y Diseño</p>
+                    </article>
                 </div>
-                <div class="equipo__miembro col-md-6 col-lg-3">
-                    <h3 class="equipo__miembro__nombre">Agus</h3>
-                    <img class="equipo__miembro__id" src="../assets/images/equipo/agus.png" alt="Foto Agus">
-                    <p class="equipo__miembro__intro">Arquitectura y Fotografía</p>
+                <div class="col-md-6 col-lg-4">
+                    <article class="equipo__miembro">
+                        <h3 class="equipo__miembro__nombre">Agus</h3>
+                        <img class="equipo__miembro__id" src="../assets/images/equipo/agus.png" alt="Foto Agus">
+                        <p class="equipo__miembro__intro">Arquitectura y Fotografía</p>
+                    </article>
                 </div>
-                <div class="equipo__miembro col-md-6 col-lg-3">
-                    <h3 class="equipo__miembro__nombre">Belu</h3>
-                    <img class="equipo__miembro__id" src="../assets/images/equipo/belu.png" alt="Foto Belu">
-                    <p class="equipo__miembro__intro">Diseño y Artes Plásticas</p>
+                <div class="col-md-6 col-lg-4">
+                    <article class="equipo__miembro">
+                        <h3 class="equipo__miembro__nombre">Belu</h3>
+                        <img class="equipo__miembro__id" src="../assets/images/equipo/belu.png" alt="Foto Belu">
+                        <p class="equipo__miembro__intro">Diseño y Artes Plásticas</p>
+                    </article>
                 </div>
-                <div class="equipo__miembro col-md-6 col-lg-3">
-                    <h3 class="equipo__miembro__nombre">Maca</h3>
-                    <img class="equipo__miembro__id" src="../assets/images/equipo/maca.png" alt="Foto Maca">
-                    <p class="equipo__miembro__intro">Diseño, Construcción y Calidad</p>
+                <div class="col-md-6 col-lg-3">
+                    <article class="equipo__miembro">
+                        <h3 class="equipo__miembro__nombre">Maca</h3>
+                        <img class="equipo__miembro__id" src="../assets/images/equipo/maca.png" alt="Foto Maca">
+                        <p class="equipo__miembro__intro">Diseño, Construcción y Calidad</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <article class="equipo__miembro">
+                        <h3 class="equipo__miembro__nombre">Pachi</h3>
+                        <img class="equipo__miembro__id" src="../assets/images/equipo/pachi.png" alt="Foto Ale">
+                        <p class="equipo__miembro__intro">Construcción</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <article class="equipo__miembro">
+                        <h3 class="equipo__miembro__nombre">Tomi</h3>
+                        <img class="equipo__miembro__id" src="../assets/images/equipo/tomi.png" alt="Foto Agus">
+                        <p class="equipo__miembro__intro">Construcción</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <article class="equipo__miembro">
+                        <h3 class="equipo__miembro__nombre">Coli</h3>
+                        <img class="equipo__miembro__id" src="../assets/images/equipo/coli.png" alt="Foto Belu">
+                        <p class="equipo__miembro__intro">Construcción</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <article class="equipo__miembro">
+                        <h3 class="equipo__miembro__nombre">Juampi</h3>
+                        <img class="equipo__miembro__id" src="../assets/images/equipo/jmpi.png" alt="Foto Maca">
+                        <p class="equipo__miembro__intro">Diseño, Fotografía y Construcción</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <article class="equipo__miembro">
+                        <h3 class="equipo__miembro__nombre">Vicky</h3>
+                        <img class="equipo__miembro__id" src="../assets/images/equipo/vicky.png" alt="Foto Belu">
+                        <p class="equipo__miembro__intro">Diseño y Construcción</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <article class="equipo__miembro">
+                        <h3 class="equipo__miembro__nombre">Rodri</h3>
+                        <img class="equipo__miembro__id" src="../assets/images/equipo/rodri.png" alt="Foto Maca">
+                        <p class="equipo__miembro__intro">Construcción</p>
+                    </article>
                 </div>
             </div>
         </div>
