--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -29,54 +29,54 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="productos">
                         <img class="productos__imagen" src="../assets/images/productos/cal-productos1a.jpeg" alt="Producto 1">
-                        <h2 class="productos__titulo">Producto 1</h2>
-                        <p class="productos__descripcion">Descripción del producto 1</p>
-                        <p class="productos__precio">Precio del producto 1</p>
+                        <h2 class="productos__titulo">Jacinto black beige</h2>
+                        <p class="productos__descripcion">Mediano 1,30m x 1,90m. Grande 1,60m x 2,30m.</p>
+                        <a class="productos__precio__consulta" href="mailto:em.estudiodediseno@gmail.com">Consultar precio</a>
                         <button class="productos__boton">Agregar al carrito</button>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">       
                     <div class="productos">
                         <img class="productos__imagen" src="../assets/images/productos/cha-productos1.jpg" alt="Producto 2">
-                        <h2 class="productos__titulo">Producto 2</h2>
-                        <p class="productos__descripcion">Descripción del producto 2</p>
-                        <p class="productos__precio">Precio del producto 2</p>
+                        <h2 class="productos__titulo">Cucharitas</h2>
+                        <p class="productos__descripcion">Hechas a mano en cerámica gres. Esmaltadas y engobadas.</p>
+                        <p class="productos__precio">$3750</p>
                         <button class="productos__boton">Agregar al carrito</button>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">    
                     <div class="productos">
                         <img class="productos__imagen" src="../assets/images/productos/cal-productos5.jpeg" alt="Producto 3">
-                        <h2 class="productos__titulo">Producto 3</h2>
-                        <p class="productos__descripcion">Descripción del producto 3</p>
-                        <p class="productos__precio">Precio del producto 3</p>
+                        <h2 class="productos__titulo">Mantas tejidas en telar a mano</h2>
+                        <p class="productos__descripcion">Mantas nacionales de algodón tejidas en telar a mano. 1,80m x 2,00m.</p>
+                        <p class="productos__precio">$22000</p>
                         <button class="productos__boton">Agregar al carrito</button>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">   
                     <div class="productos">
                         <img class="productos__imagen" src="../assets/images/productos/cha-productos2.jpg" alt="Producto 4">
-                        <h2 class="productos__titulo">Producto 4</h2>
-                        <p class="productos__descripcion">Descripción del producto 4</p>
-                        <p class="productos__precio">Precio del producto 4</p>
+                        <h2 class="productos__titulo">Grullas</h2>
+                        <p class="productos__descripcion">Acrílico 60cm x 60cm. Enmarcado en kiri sin vidrio.</p>
+                        <p class="productos__precio">$12150</p>
                         <button class="productos__boton">Agregar al carrito</button>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4"> 
                     <div class="productos">
                         <img class="productos__imagen" src="../assets/images/productos/cal-productos3.jpeg" alt="Producto 4">
-                        <h2 class="productos__titulo">Producto 5</h2>
-                        <p class="productos__descripcion">Descripción del producto 4</p>
-                        <p class="productos__precio">Precio del producto 5</p>
+                        <h2 class="productos__titulo">Alfombras de algodón pintado y yute</h2>
+                        <p class="productos__descripcion">Alfombras persas importadas. Yute y algodón pintado a mano. 2,00m x 3,00m.</p>
+                        <a class="productos__precio__consulta" href="mailto:em.estudiodediseno@gmail.com">Consultar precio</a>
                         <button class="productos__boton">Agregar al carrito</button>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4"> 
                     <div class="productos">
                         <img class="productos__imagen" src="../assets/images/productos/cha-productos3a.jpg" alt="Producto 4">
-                        <h2 class="productos__titulo">Producto 6</h2>
-                        <p class="productos__descripcion">Descripción del producto 4</p>
-                        <p class="productos__precio">Precio del producto 6</p>
+                        <h2 class="productos__titulo">Piezas de cerámica</h2>
+                        <p class="productos__descripcion">Cerámica esmaltada 40cm x 40cm. Presentado sobre géneros teñidos de forma natural.</p>
+                        <p class="productos__precio">$12750</p>
                         <button class="productos__boton">Agregar al carrito</button>
                     </div> 
                 </div>
