--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -29,29 +29,57 @@
                 <div class="col-md-6 col-lg-3">
                     <article class="trabajos">
                         <img class="trabajos__imagen" src="../assets/images/trabajos/cha-trabajos3.jpg" alt="Trabajo 1">
-                        <h2 class="trabajos__titulo">Trabajo 1</h2>
-                        <p class="trabajos__abstract">Descripción del Trabajo 1</p>
+                        <h2 class="trabajos__titulo">Pájaros</h2>
+                        <p class="trabajos__abstract">Acrílico sobre madera 0,70m x 1,20m. Enmarcado en kiri.</p>
                     </article>
                 </div>
                 <div class="col-md-6 col-lg-3">    
                     <article class="trabajos">
                         <img class="trabajos__imagen" src="../assets/images/trabajos/cal-trabajos1a.jpeg" alt="Trabajo 2">
-                        <h2 class="trabajos__titulo">Trabajo 2</h2>
-                        <p class="trabajos__abstract">Descripción del Trabajo 2</p>
+                        <h2 class="trabajos__titulo">Espejo de madera maciza</h2>
+                        <p class="trabajos__abstract">Guayca paraguaya 1,85m x 0,60m. Marco cajón con espejo inclinado.</p>
                     </article>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <article class="trabajos">
                         <img class="trabajos__imagen" src="../assets/images/trabajos/rku-trabajos2c.jpg" alt="Trabajo 3">
-                        <h2 class="trabajos__titulo">Trabajo 3</h2>
-                        <p class="trabajos__abstract">Descripción del Trabajo 3</p>
+                        <h2 class="trabajos__titulo">Caja de música</h2>
+                        <p class="trabajos__abstract">Enrejado en pino vinculado con varillas metálicas.</p>
                     </article>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <article class="trabajos">
                         <img class="trabajos__imagen" src="../assets/images/trabajos/cha-trabajos2.jpg" alt="Trabajo 4">
-                        <h2 class="trabajos__titulo">Trabajo 4</h2>
-                        <p class="trabajos__abstract">Descripción del Trabajo 4</p>
+                        <h2 class="trabajos__titulo">Montaña</h2>
+                        <p class="trabajos__abstract">Látex para interior. Mural abstracto.</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <article class="trabajos">
+                        <img class="trabajos__imagen" src="../assets/images/trabajos/cal-trabajos3.png" alt="Trabajo 1">
+                        <h2 class="trabajos__titulo">Lavado de muebles</h2>
+                        <p class="trabajos__abstract">Mesa y soporte de cama antiguos lavados y barnizados.</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-3">    
+                    <article class="trabajos">
+                        <img class="trabajos__imagen" src="../assets/images/trabajos/cha-trabajos4.png" alt="Trabajo 2">
+                        <h2 class="trabajos__titulo">Siluetas (tríptico)</h2>
+                        <p class="trabajos__abstract">Técnica mixta: Cerámica esmaltada presentada sobre géneros pintados con acrílico. 22,5cm x 27cm. Enmarcado en kiri sin vidrio.</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <article class="trabajos">
+                        <img class="trabajos__imagen" src="../assets/images/trabajos/cha-trabajos5.png" alt="Trabajo 3">
+                        <h2 class="trabajos__titulo">Caja de música</h2>
+                        <p class="trabajos__abstract">Enrejado en pino vinculado con varillas metálicas.</p>
+                    </article>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <article class="trabajos">
+                        <img class="trabajos__imagen" src="../assets/images/trabajos/cal-trabajos2.png" alt="Trabajo 4">
+                        <h2 class="trabajos__titulo">Espejo de madera maciza</h2>
+                        <p class="trabajos__abstract">Alamo nacional 1,85m x 0,80m. Espejo tipo bastidor.</p>
                     </article>
                 </div>
             </div>
