--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,21 +27,21 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12 col-lg-12">
-                    <h2 class="form__title">Te ayudamos a materializar tus ideas</h2>
+                    <h2 class="form__title">No existen límites para tus ideas y nosotros te ayudamos a materializarlas...</h2>
                 </div>
                 <div class="col-md-10 col-lg-10 mx-auto">
                     <form action="" method="post" enctype="multipart/form-data">
                         <label for="nombre">Nombre</label>
-                        <input type="text" id="nombre" name="nombre" placeholder="Nombre">
+                        <input type="text" id="nombre" name="nombre" placeholder="escribe aquí tu nombre">
                         <br>
                         <label for="apellido">Apellido</label>
-                        <input type="text" id="apellido" name="apellido" placeholder="Apellido">
+                        <input type="text" id="apellido" name="apellido" placeholder="escribe aquí tu apellido">
                         <br>
                         <label for="email">Email</label>
-                        <input type="email" id="email" name="email" placeholder="Nombre@email.com">
+                        <input type="email" id="email" name="email" placeholder="escribe aquí tu email">
                         <br>
                         <label for="proyecto">Cuéntanos tu idea</label>
-                        <textarea name="proyecto" id="proyecto" placeholder="Usa este espacio para contarnos tu idea" cols="30" rows="10"></textarea>
+                        <textarea name="proyecto" id="proyecto" placeholder="cuéntanos tu idea" cols="30" rows="10"></textarea>
                         <br>
                         <input class="form__boton" type="submit">
                     </form>
